--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -72,7 +72,7 @@
           <line x1="16" y1="17" x2="8" y2="17"></line>
           <polyline points="10 9 9 9 8 9"></polyline>
         </svg>
-        {{ i18n "wordCount" .Page.WordCount }}
+        {{ i18n "wordCount" }}: {{ .Content | ref .Page | readFile | len | replace "\n" "" }}
       </p>
 
       <p>
