--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -83,17 +83,17 @@
           <line x1="3" y1="10" x2="21" y2="10"></line>
         </svg>
         {{ if .Site.Params.dateformNumTime }}
-          {{ dateFormat .Site.Params.dateformNumTime .Date.Local }}
+          {{ dateFormat .Site.Params.dateformNumTime .Date }}
         {{ else }}
-          {{ dateFormat "2006-01-02 15:04" .Date.Local }}
+          {{ dateFormat "2006-01-02 15:04" .Date }}
         {{ end }}
 
         {{ if .Lastmod }} 
           {{ if not (eq .Lastmod .Date )}}
             {{ if .Site.Params.dateformNumTime }}
-              ({{ i18n "lastModified" }}: {{ dateFormat .Site.Params.dateformNumTime .Lastmod.Local }})
+              ({{ i18n "lastModified" }}: {{ dateFormat .Site.Params.dateformNumTime .Lastmod }})
             {{ else }} 
-              ({{ i18n "lastModified" }}: {{ dateFormat "2006-01-02 15:04" .Lastmod.Local }})
+              ({{ i18n "lastModified" }}: {{ dateFormat "2006-01-02 15:04" .Lastmod }})
             {{ end }}
           {{ end }}
         {{ end }}
